<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_saved_recipe">Saved Recipe</string>
    <string name="menu_settings">Settings</string>
    <string name="iv_recipe_image_content_desc">Recipe Image</string>
    <string name="iv_calorie_desc">Calorie</string>
    <string name="iv_time_desc">Time</string>

    <string name="not_found">Recipe not found.</string>
    <string name="calorie_string">%1$.2f kcal</string>
    <string name="time_string">%1$.1f minute(s)</string>
    <string name="action_add_to_favorite">Add to favorite</string>
    <string name="empty_string">You have no saved recipe</string>
    <string name="action_delete_string">Delete</string>
    <string name="fab_content_desc">Save recipe</string>
    <string name="delete_string">Delete</string>
    <string name="cancel_string">Cancel</string>

    <plurals name="delete_multiple_item">
        <item quantity="one">Delete this recipe?</item>
        <item quantity="two">Delete this recipes?</item>
        <item quantity="many">Delete this recipes?</item>
        <item quantity="other">Delete this recipes?</item>
    </plurals>
</resources>