<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.layrin.recipefinder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_saved_recipe"
        android:name="com.layrin.recipefinder.ui.saved.SavedRecipeFragment"
        android:label="@string/menu_saved_recipe"
        tools:layout="@layout/fragment_saved_recipe" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.layrin.recipefinder.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>