<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="175dp"
    android:layout_height="200dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_image"
            tools:text="THIS IS A VERY LONG TITLE" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_recipe_image"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:contentDescription="@string/iv_recipe_image_content_desc"
                android:src="@drawable/ic_menu_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/iv_time_desc"
            android:src="@drawable/ic_time"
            app:layout_constraintEnd_toStartOf="@id/tv_cook_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recipe_title" />

        <TextView
            android:id="@+id/tv_cook_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@id/iv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_time"
            app:layout_constraintTop_toTopOf="@id/iv_time"
            tools:text="1 min 30 sec" />

        <ImageView
            android:id="@+id/iv_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/iv_calorie_desc"
            android:src="@drawable/ic_calorie"
            app:layout_constraintEnd_toEndOf="@id/iv_time"
            app:layout_constraintStart_toStartOf="@id/iv_time"
            app:layout_constraintTop_toBottomOf="@id/iv_time" />

        <TextView
            android:id="@+id/tv_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@id/iv_calorie"
            app:layout_constraintStart_toStartOf="@id/tv_cook_time"
            app:layout_constraintTop_toTopOf="@id/iv_calorie"
            tools:text="500 cal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>